--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
+<html>
+
   <head>
     <meta charset="UTF-8">
   </head>
 
-  <body><h1>Odin Recipes</h1></body>
+  <body>
+    <h1>Odin Recipes</h1>
+    <ul>
+    <li><a href="recipes/lasagna.html">The World&lsquo;s Best Lasagna</a></li>
+    <li><a href="recipes/meatball.html">The World&lsquo;s Best Meat Ball</a></li>
+    <li><a href="recipes/lavacake.html">The World&lsquo;s Best Lavacake</a></li>
+    </ul>
+  </body>
+ 
+ </html>
